# app/internal/db/models.go
@@ -9,6 +9,15 @@ import (
 	"time"
 )
 
+type Account struct {
+	ID            int64          `json:"id"`
+	CognitoSub    string         `json:"cognito_sub"`
+	Email         sql.NullString `json:"email"`
+	PrimaryUserID int64          `json:"primary_user_id"`
+	CreatedAt     time.Time      `json:"created_at"`
+	UpdatedAt     time.Time      `json:"updated_at"`
+}
+
 type Announcement struct {
 	ID          int64     `json:"id"`
 	Title       string    `json:"title"`
@@ -99,6 +108,7 @@ type User struct {
 	CreatedAt   sql.NullTime   `json:"created_at"`
 	UpdatedAt   sql.NullTime   `json:"updated_at"`
 	DisplayName sql.NullString `json:"display_name"`
+	AccountID   sql.NullInt64  `json:"account_id"`
 }
 
 type UserAnswer struct {
